--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -145,46 +145,51 @@
                         <span class="sub-tittle editContent" style="outline: none; cursor: inherit;">02</span>Оставить
                         отзыв
                     </h3>
-                    <form action="#" method="get" class="mt-4">
+                    <form action="{% url 'add_review' movie.id %}" method="post" class="mt-4">
+                        {% csrf_token %}
                         <div class="form-group editContent" style="outline: none; cursor: inherit;">
-                            <label for="contactcomment" class="editContent" style="outline: none; cursor: inherit;">Ваш
-                                комментарий
-                                *</label>
-                            <textarea class="form-control border" rows="5" id="contactcomment" required=""></textarea>
+                            <label for="contactcomment" class="editContent" style="outline: none; cursor: inherit;">
+                                Ваш комментарий *
+                            </label>
+                            <textarea class="form-control border" rows="5" name="text" id="contactcomment" required=""></textarea>
                         </div>
                         <div class="d-sm-flex">
                             <div class="col-sm-6 form-group p-0 editContent" style="outline: none; cursor: inherit;">
                                 <label for="contactusername" class="editContent"
-                                    style="outline: none; cursor: inherit;">Имя
-                                    *</label>
-                                <input type="text" class="form-control border" id="contactusername" required="">
+                                    style="outline: none; cursor: inherit;">
+                                    Имя*
+                                </label>
+                                <input type="text" class="form-control border" name="name" id="contactusername" required="">
                             </div>
                             <div class="col-sm-6 form-group ml-sm-3 editContent"
                                 style="outline: none; cursor: inherit;">
                                 <label for="contactemail" class="editContent"
-                                    style="outline: none; cursor: inherit;">Email
-                                    *</label>
-                                <input type="email" class="form-control border" id="contactemail" required="">
+                                    style="outline: none; cursor: inherit;">
+                                    Email *
+                                </label>
+                                <input type="email" class="form-control border" name="email" id="contactemail" required="">
                             </div>
                         </div>
                         <button type="submit" class="mt-3 btn btn-success btn-block py-3"
-                            style="outline: none; cursor: inherit;">Отправить
+                            style="outline: none; cursor: inherit;">
+                            Отправить
                         </button>
                     </form>
                 </div>
                 <!--  //contact form grid ends here -->
             </div>
+        </div>
+            {% for review in movie.reviews.all %}
             <div class="media py-5">
-                <img src="bundles/images/te2.jpg" class="mr-3 img-fluid" alt="image"
-                    style="outline: none; cursor: inherit;">
+                <img src="bundles/images/te2.jpg" class="mr-3 img-fluid" alt="image">
                 <div class="media-body mt-4">
-                    <h5 class="mt-0 editContent" style="outline: none; cursor: inherit;">Daniel Doe</h5>
+                    <h5 class="mt-0 editContent">
+                        {{ review.name }}
+                    </h5>
                     <p class="mt-2 editContent" style="outline: none; cursor: inherit;">
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-                        scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                        vulputate at, tempus viverra turpis.
+                        {{ review.text }}
                     </p>
-                    <div class="media mt-5 editContent" style="outline: none; cursor: inherit;">
+                    <!-- <div class="media mt-5 editContent" style="outline: none; cursor: inherit;">
                         <a class="pr-3" href="#">
                             <img src="bundles/images/te1.jpg" class="img-fluid " alt="image"
                                 style="outline: none; cursor: inherit;">
@@ -197,9 +202,10 @@
                                 vestibulum in vulputate at, tempus viverra turpis. Fusce
                                 condimentum nunc ac nisi vulputate fringilla..</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
 
