--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -1,5 +1,7 @@
 {% extends 'movies/base.html' %}
 
+{% load static %}
+
 {% block title %} {{ movie.title }} {% endblock title %}
 
 {% block container %}
@@ -114,7 +116,7 @@
         </div>
         <div class="row sub-para-w3layouts mt-5">
 
-            <h3 class="shop-sing editContent" style="outline: none; cursor: inherit;">
+            <h3 class="shop-sing editContent">
                 О фильме {{ movie.title }}
             </h3>
             <p>
@@ -123,7 +125,7 @@
                 {% endfor %}
 
             </p>
-            <p class="editContent" style="outline: none; cursor: inherit;">
+            <p class="editContent">
                 {{ movie.description }}
             </p>
             <p class="mt-3 italic-blue editContent" style="outline: none; cursor: inherit;">
@@ -141,30 +143,31 @@
             <div class="single-form-left">
                 <!-- contact form grid -->
                 <div class="contact-single">
-                    <h3 class="editContent" style="outline: none; cursor: inherit;">
-                        <span class="sub-tittle editContent" style="outline: none; cursor: inherit;">02</span>Оставить
+                    <h3 class="editContent">
+                        <span class="sub-tittle editContent">
+                            {{ movie.reviews.count }}
+                        </span>Оставить
                         отзыв
                     </h3>
-                    <form action="{% url 'add_review' movie.id %}" method="post" class="mt-4">
+                    <form action="{% url 'add_review' movie.id %}" method="post" class="mt-4" id="formReview">
                         {% csrf_token %}
-                        <div class="form-group editContent" style="outline: none; cursor: inherit;">
-                            <label for="contactcomment" class="editContent" style="outline: none; cursor: inherit;">
+                        <input type="hidden" name="parent" id="contactparent" value="">
+                        <div class="form-group editContent">
+                            <label for="contactcomment" class="editContent">
                                 Ваш комментарий *
                             </label>
                             <textarea class="form-control border" rows="5" name="text" id="contactcomment" required=""></textarea>
                         </div>
                         <div class="d-sm-flex">
-                            <div class="col-sm-6 form-group p-0 editContent" style="outline: none; cursor: inherit;">
+                            <div class="col-sm-6 form-group p-0 editContent">
                                 <label for="contactusername" class="editContent"
                                     style="outline: none; cursor: inherit;">
                                     Имя*
                                 </label>
                                 <input type="text" class="form-control border" name="name" id="contactusername" required="">
                             </div>
-                            <div class="col-sm-6 form-group ml-sm-3 editContent"
-                                style="outline: none; cursor: inherit;">
-                                <label for="contactemail" class="editContent"
-                                    style="outline: none; cursor: inherit;">
+                            <div class="col-sm-6 form-group ml-sm-3 editContent">
+                                <label for="contactemail" class="editContent">
                                     Email *
                                 </label>
                                 <input type="email" class="form-control border" name="email" id="contactemail" required="">
@@ -179,9 +182,9 @@
                 <!--  //contact form grid ends here -->
             </div>
         </div>
-            {% for review in movie.reviews.all %}
+            {% for review in movie.get_review %}
             <div class="media py-5">
-                <img src="bundles/images/te2.jpg" class="mr-3 img-fluid" alt="image">
+                <img src="{% static 'images/te2.jpg' %}" class="mr-3 img-fluid" alt="image">
                 <div class="media-body mt-4">
                     <h5 class="mt-0 editContent">
                         {{ review.name }}
@@ -189,24 +192,33 @@
                     <p class="mt-2 editContent" style="outline: none; cursor: inherit;">
                         {{ review.text }}
                     </p>
-                    <!-- <div class="media mt-5 editContent" style="outline: none; cursor: inherit;">
+                    <a href="#formReview" onclick="addReview('{{ review.name }}', '{{ review.id }}')" >Ответить</a>
+                    {% for rev in review.reviews_set.all %}
+                    <div class="media mt-5 editContent">
                         <a class="pr-3" href="#">
-                            <img src="bundles/images/te1.jpg" class="img-fluid " alt="image"
-                                style="outline: none; cursor: inherit;">
+                            <img src="{% static 'images/te2.jpg' %}" class="img-fluid " alt="image">
                         </a>
                         <div class="media-body">
-                            <h5 class="mt-0 editContent" style="outline: none; cursor: inherit;">Leia Organa</h5>
-                            <p class="mt-2 editContent" style="outline: none; cursor: inherit;"> Cras sit amet
-                                nibh libero, in gravida nulla. Nulla vel metus
-                                scelerisque ante sollicitudin. Cras purus odio,
-                                vestibulum in vulputate at, tempus viverra turpis. Fusce
-                                condimentum nunc ac nisi vulputate fringilla..</p>
+                            <h5 class="mt-0 editContent">
+                                {{ rev.name }}
+                            </h5>
+                            <p class="mt-2 editContent">
+                                {{ rev.text }}
+                            </p>
                         </div>
-                    </div> -->
+                    </div>
+                    {% endfor %}
                 </div>
             </div>
             {% endfor %}
         </div>
     </div>
+
+    <script>
+        function addReview(name, id){
+            document.getElementById("contactparent").value = id;  // находим в документе по id = parent и в поле value записываем id
+            document.getElementById("contactcomment").innerText = `${name}, `
+        }
+    </script>
 
     {% endblock movie %}
