--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -27,55 +27,59 @@
                 </h3>
                 <h5 class="editContent"></h5>
                 <ul>
-                    <li style="list-style: none"><span><b>Год:</b>
+                    <li><span><b>Год:</b>
                             {{ movie.year }}
                         </span></li>
-                    <li style="list-style: none"><span><b>Страна:</b>
+                    <li><span><b>Страна:</b>
                             {{ movie.country }}
                         </span>
                     </li>
-                    <li style="list-style: none"><span><b>Слоган:</b>
+                    <li><span><b>Слоган:</b>
                             {{ movie.tagLine }}
                         </span>
                     </li>
-                    <li style="list-style: none">
+                    <li>
                         <span><b>Режиссер:</b>
                             <!-- Так как directors, actors, genres - это ManyToMany fields, нужно проходиться циклом, чтобы достать значения из списка -->
                             {% for director in movie.directors.all %}
-                            {{ director.name }}
+                            <a href="{{ director.get_absolute_url }}">
+                                {{ director.name }}
+                            </a>
                             {% endfor %}
                         </span>
                     </li>
-                    <li style="list-style: none"><span><b>Актеры:</b>
+                    <li><span><b>Актеры:</b>
                             {% for actor in movie.actors.all %}
-                            {{ actor.name }}
+                            <a href="{{ actor.get_absolute_url }}">
+                                {{ actor.name }}
+                            </a>
                             {% endfor %}
                         </span></li>
-                    <li style="list-style: none"><span><b>Жанр:</b>
+                    <li><span><b>Жанр:</b>
                             {% for genre in movie.genres.all %}
                             {{ genre.name }}
                             {% endfor %}
                         </span>
                     </li>
-                    <li style="list-style: none"><span><b>Премьера в мире:</b>
+                    <li><span><b>Премьера в мире:</b>
                             {{ movie.world_premiere }}
                         </span>
                     </li>
-                    <li style="list-style: none">
+                    <li>
                         <span><b>Бюджет:</b>
                             $ {{ movie.budget }}
                         </span>
                     </li>
-                    <li style="list-style: none">
+                    <li>
                         <span><b>Сборы в США:</b>
                             $ {{ movie.fees_in_usa }}
                         </span>
                     </li>
-                    <li style="list-style: none"><span><b>Сборы в мире:</b>
+                    <li><span><b>Сборы в мире:</b>
                             $ {{ movie.fees_in_world }}
                         </span>
                     </li>
-                    <li style="list-style: none">
+                    <li>
                         <a href="#"><b>Рейтинг:</b>
                             <span class="fa fa-star" aria-hidden="true" style="outline: none; cursor: inherit;"></span>
                             <span class="fa fa-star" aria-hidden="true" style="outline: none; cursor: inherit;"></span>
@@ -128,15 +132,6 @@
             <p class="editContent">
                 {{ movie.description|safe }}
             </p>
-            <!-- <p class="mt-3 italic-blue editContent" style="outline: none; cursor: inherit;">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/A36LahZNUiE?controls=0"
-                    frameborder="0"
-                    allow="accelerometer; autoplay;
-                                                                           encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-
-                </iframe>
-            </p> -->
         </div>
         <hr>
         <div class="row">
