--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -1,6 +1,6 @@
 {% extends 'movies/base.html' %}
 
-{% load static %}
+{% load static i18n %}
 
 {% block title %} {{ movie.title }} {% endblock title %}
 
@@ -27,19 +27,19 @@
                 </h3>
                 <h5 class="editContent"></h5>
                 <ul>
-                    <li><span><b>Год:</b>
+                    <li><span><b>{% trans 'Год' %}:</b>
                             {{ movie.year }}
                         </span></li>
-                    <li><span><b>Страна:</b>
+                    <li><span><b>{% trans 'Страна' %}:</b>
                             {{ movie.country }}
                         </span>
                     </li>
-                    <li><span><b>Слоган:</b>
+                    <li><span><b>{% trans 'Слоган' %}:</b>
                             {{ movie.tagLine }}
                         </span>
                     </li>
                     <li>
-                        <span><b>Режиссер:</b>
+                        <span><b>{% trans 'Режиссер' %}:</b>
                             <!-- Так как directors, actors, genres - это ManyToMany fields, нужно проходиться циклом, чтобы достать значения из списка -->
                             {% for director in movie.directors.all %}
                             <a href="{{ director.get_absolute_url }}">
@@ -48,40 +48,40 @@
                             {% endfor %}
                         </span>
                     </li>
-                    <li><span><b>Актеры:</b>
+                    <li><span><b>{% trans 'Актеры' %}:</b>
                             {% for actor in movie.actors.all %}
                             <a href="{{ actor.get_absolute_url }}">
                                 {{ actor.name }}
                             </a>
                             {% endfor %}
                         </span></li>
-                    <li><span><b>Жанр:</b>
+                    <li><span><b>{% trans 'Жанры' %}:</b>
                             {% for genre in movie.genres.all %}
                             {{ genre.name }}
                             {% endfor %}
                         </span>
                     </li>
-                    <li><span><b>Премьера в мире:</b>
+                    <li><span><b>{% trans 'Премьера в мире' %}:</b>
                             {{ movie.world_premiere }}
                         </span>
                     </li>
                     <li>
-                        <span><b>Бюджет:</b>
+                        <span><b>{% trans 'Бюджет' %}:</b>
                             $ {{ movie.budget }}
                         </span>
                     </li>
                     <li>
-                        <span><b>Сборы в США:</b>
+                        <span><b>{% trans 'Сборы в США' %}:</b>
                             $ {{ movie.fees_in_usa }}
                         </span>
                     </li>
-                    <li><span><b>Сборы в мире:</b>
+                    <li><span><b>{% trans 'Сборы в мире' %}:</b>
                             $ {{ movie.fees_in_world }}
                         </span>
                     </li>
                     <li>
                         <form action="{% url 'add_rating' %}" method="post" name="rating">
-                        <b>Рейтинг:</b>
+                        <b>{% trans 'Рейтинг' %}:</b>
                         {%csrf_token %}
                         <input type="hidden" value="{{ movie.id }}" name="movie">
                             <span class="rating">
@@ -125,7 +125,7 @@
         <div class="row sub-para-w3layouts mt-5">
 
             <h3 class="shop-sing editContent">
-                О фильме {{ movie.title }}
+                {% trans 'О фильме' %} {{ movie.title }}
             </h3>
             <p>
                 {% for shot in movie.shots.all %}
@@ -145,15 +145,14 @@
                     <h3 class="editContent">
                         <span class="sub-tittle editContent">
                             {{ movie.reviews.count }}
-                        </span>Оставить
-                        отзыв
+                        </span>{% trans 'Оставить отзыв' %}
                     </h3>
                     <form action="{% url 'add_review' movie.id %}" method="post" class="mt-4" id="formReview">
                         {% csrf_token %}
                         <input type="hidden" name="parent" id="contactparent" value="">
                         <div class="form-group editContent">
                             <label for="contactcomment" class="editContent">
-                                Ваш комментарий *
+                                {% trans 'Ваш комментарий' %} *
                             </label>
                             {{ form.text }}
                         </div>
@@ -161,7 +160,7 @@
                             <div class="col-sm-6 form-group p-0 editContent">
                                 <label for="contactusername" class="editContent"
                                     style="outline: none; cursor: inherit;">
-                                    Имя*
+                                    {% trans 'Имя' %}*
                                 </label>
                                 {{ form.name }}
                             </div>
@@ -175,7 +174,7 @@
                         </div>
                         <button type="submit" class="mt-3 btn btn-success btn-block py-3"
                             style="outline: none; cursor: inherit;">
-                            Отправить
+                            {% trans 'Отправить' %}
                         </button>
                     </form>
                 </div>
@@ -192,7 +191,7 @@
                     <p class="mt-2 editContent" style="outline: none; cursor: inherit;">
                         {{ review.text }}
                     </p>
-                    <a href="#formReview" onclick="addReview('{{ review.name }}', '{{ review.id }}')" >Ответить</a>
+                    <a href="#formReview" onclick="addReview('{{ review.name }}', '{{ review.id }}')" >{% trans 'Ответить' %}</a>
                     {% for rev in review.reviews_set.all %}
                     <div class="media mt-5 editContent">
                         <a class="pr-3" href="#">
