--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -1,4 +1,5 @@
 {% load i18n movie_tag %}
+{% load static i18n %}
 
 <header class="header">
     <div class="container-fluid px-lg-5">
@@ -13,12 +14,12 @@
             <label for="drop" class="toggle">Menu</label>
             <input type="checkbox" id="drop">
             <ul class="menu mt-2">
-                <li class="active"><a href="index.html">Главная</a></li>
+                <li class="active"><a href="index.html">{% trans 'Главная' %}</a></li>
                 <li>
                     <!-- First Tier Drop Down -->
-                    <label for="drop-2" class="toggle">Категории <span class="fa fa-angle-down"
+                    <label for="drop-2" class="toggle">{% trans 'Категории' %} <span class="fa fa-angle-down"
                             aria-hidden="true"></span> </label>
-                    <a href="#">Категории <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                    <a href="#">{% trans 'Категории' %} <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                     <input type="checkbox" id="drop-2">
                     <ul>
                         {% get_categories as categories %}
@@ -28,7 +29,7 @@
                     </ul>
                 </li>
                 <li><a href="contact.html"
-                        style="color: rgb(255, 255, 255); font-weight: 700; text-transform: uppercase;">Вход</a>
+                        style="color: rgb(255, 255, 255); font-weight: 700; text-transform: uppercase;">{% trans 'Вход' %}</a>
                 </li>
 
                 <li>
@@ -57,7 +58,7 @@
 <!--/banner-->
 <div class="banner-info">
     <p class="editContent">лучший сайт на django 3</p>
-    <h3 class="mb-4 editContent">Все о кино</h3>
+    <h3 class="mb-4 editContent">{% trans 'Все о кино' %}</h3>
     <div class="ban-buttons">
 
 
