--- a/templates/movies/actor.html
+++ b/templates/movies/actor.html
@@ -1,6 +1,6 @@
 {% extends 'movies/base.html' %}
 
-{% load static %}
+{% load static i18n %}
 
 {% block title %} {{ actor.name }} {% endblock title %}
 
@@ -27,17 +27,17 @@
                 </h3>
                 <h5 class="editContent"></h5>
                 <ul>
-                    <li><span><b>Возраст:</b>
-                            {{ actor.age }} лет
+                    <li><span><b>{% trans 'Возраст' %}:</b>
+                            {{ actor.age }} {% trans 'лет' %}
                         </span></li>
-                    <li><span><b>Режиссер:</b>
+                    <li><span><b>{% trans 'Режиссер' %}:</b>
                         <!-- Так как directors, actors, genres - это ManyToMany fields, нужно проходиться циклом, чтобы достать значения из списка -->
                         {% for movie in actor.film_director.all %}
                         {{ movie.title}}
                         {% endfor %}
                     </span></li>
                     </li>
-                    <li><span><b>Актер:</b>
+                    <li><span><b>{% trans 'Актер' %}:</b>
                             {% for movie in actor.film_actor.all %}
                             {{ movie.title }}
                             {% endfor %}
