--- a/templates/movies/movie_list.html
+++ b/templates/movies/movie_list.html
@@ -1,6 +1,8 @@
 {% extends 'movies/base.html' %}
 
-{% block title %} Главная {% endblock title %}
+{% load static i18n %}
+
+{% block title %} {% trans 'Главная' %} {% endblock title %}
 
 {% block header %} bg1 {% endblock header %}
 
